--- a/css/content.css
+++ b/css/content.css
@@ -1,7 +1,7 @@
 .header {
     width: 40%;
-    height: 50px;
-    margin: 20px auto;
+    height: 10%;
+    margin: 50px auto;
     position: relative;
 }
 
@@ -22,39 +22,40 @@
     align-items: center;
 }
 .header .title p {
-    font-size: 20px;
+    font-size: 30px;
 }
+
 .nav {
-    height: 20px;
+    height: 40px;
     width: 70%;
     margin: 10px auto;
 }
 .nav .back {
     position: relative;
-    height: 20px;
-    width: 40px;
+    height: 40px;
+    width: 80px;
 }
 .nav img {
     position: absolute;
-    height: 20px;
-    width: 40px;
+    height: 100%;
+    width: 100%;
 }
 .nav .back .text {
     position: absolute;
-    height: 20px;
-    width: 40px;
+    height: 100%;
+    width: 100%;
     display: flex; /* 使用 Flex 布局 */
     justify-content: center; /* 在主轴上居中对齐 */
     align-items: center;
 }
 .nav .back .text a {
-    font-size: 12px;
+    font-size: 18px;
     cursor: pointer;
 }
 .content {
     width: 70%;
-    height: 400px;
-    margin: 25px auto;
+    height: 600px;
+    margin: 20px auto;
     position: relative;
 }
 .content img {
@@ -78,12 +79,10 @@
     border-collapse: collapse; /* 合并边框 */
 }
 th, td {
-    border: 1px solid #ddd; /* 设置单元格边框 */
-    padding: 10px; /* 设置单元格内边距 */
+    border: 3px solid #ddd; /* 设置单元格边框 */
+    padding: 15px; /* 设置单元格内边距 */
     text-align: center; /* 文本左对齐 */
-}
-td {
-    font-size: 13px;
+    font-size: 20px;
 }
 
 .content .express {
@@ -99,6 +98,6 @@ td {
 }
 .content .express p {
     margin-bottom: 10px;
-    font-size: 15px;
+    font-size: 24px;
 }
 
