--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 .header {
     width: 40%;
-    height: 50px;
-    margin: 20px auto;
+    height: 10%;
+    margin: 50px auto;
     position: relative;
 }
 
@@ -22,20 +22,21 @@
     align-items: center;
 }
 .header .title p {
-    font-size: 20px;
+    font-size: 30px;
 }
 
 .nav {
-    width: 85%;
-    height: 400px;
+    width: 80%;
+    height: 600px;
     margin:50px auto;
 }
 
 .info {
-    width: 30%;
+    width: 40%;
     height: 100%;
     position: relative;
     float: left;
+    left:-10%;
 }
 .info img {
     position: absolute;
@@ -43,12 +44,12 @@
     height: 100%;
 }
 .nav-concert {
-    height: 400px;
+    height: 500px;
     margin-left: 60px;
 }
 .nav-concert ul {
-    padding: 60px;
-    height: 280px;
+    padding: 80px;
+    height: 340px;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
@@ -56,8 +57,8 @@
 }
 .nav-concert ul li {
     margin-right: 40px;
-    width: 120px;
-    height: 60px;
+    width: 140px;
+    height: 80px;
     position: relative;
 }
 /*.nav-concert li::after {*/
@@ -85,18 +86,18 @@
     top: 50%; /* 盒子相对于容器垂直居中 */
     left: 50%; /* 盒子相对于容器水平居中 */
     transform: translate(-50%, -50%);
-    width: 120px;
-    height: 60px;
+    width: 140px;
+    height: 80px;
     display: flex; /* 使用 Flex 布局 */
     justify-content: center; /* 在主轴上居中对齐 */
     align-items: center; /* 在交叉轴上居中对齐 */
 }
 .nav-concert .select a {
     cursor: pointer;
-    font-size: 16px;
+    font-size: 20px;
 }
 .nav-concert .select a:hover {
-    font-size: 20px;
+    font-size: 24px;
 }
 
 
